Fix nav bar link spacing

--- a/src/resources/elements/navigation.scss
+++ b/src/resources/elements/navigation.scss
@@ -18,8 +18,8 @@
 }
 
 .nav-item {
-  padding-left: 1.15rem;
-  padding-right: 1.15rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
   font-family: $headings-font-family;
   white-space: nowrap;
 }
